--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,6 @@
     <string name="send">发送</string>
     <string name="_331063594_qq_com">331063594@qq.com</string>
     <string name="name">郑伟知足常乐</string>
+    <string name="clear">清空聊天数据</string>
+    <string name="cancel">取消</string>
 </resources>
