--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="name">郑伟知足常乐</string>
     <string name="clear">清空聊天数据</string>
     <string name="cancel">取消</string>
+    <string name="change_robot">机器人换头像</string>
 </resources>
